--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,7 @@
 ignore-workspace-root-check=true
 strict-peer-dependencies=false
 auto-install-peers=true
+link-workspace-packages=true
 
 # https://github.com/electron-userland/electron-builder
 node-linker=hoisted
