--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.8.2",
   "private": true,
-  "packageManager": "pnpm@8.6.5",
+  "packageManager": "pnpm@9.4.0",
   "description": "",
   "author": "aooiuu <aooiu@qq.com>",
   "license": "GPL3",
@@ -25,42 +25,46 @@
     "*.d.ts"
   ],
   "scripts": {
-    "start": "esno index.ts",
+    "start": "tsx index.ts",
     "release": "bumpp -r --no-push",
     "clean": "rimraf packages/*/dist --glob",
     "clean:npm": "rimraf packages/*/node_modules --glob && rimraf node_modules",
-    "run:core": "npm -C packages/core run start",
-    "rule-utils:build": "npm -C packages/rule-utils run build",
-    "core:build": "npm -C packages/core run build",
-    "shared:build": "npm -C packages/shared run build",
-    "epub:build": "npm -C packages/epub run build",
-    "build:web": "npm -C packages/web run build",
-    "build:web-w": "npm -C packages/web run build:w",
+    "run:core": "pnpm --filter=@any-reader/core start",
+    "rule-utils:build": "pnpm --filter=@any-reader/rule-utils build",
+    "core:build": "pnpm --filter=@any-reader/core build",
+    "shared:build": "pnpm --filter=@any-reader/shared build",
+    "epub:build": "pnpm --filter=@any-reader/epub build",
+    "build:web": "pnpm --filter=@any-reader/web build",
+    "build:web-w": "pnpm --filter=@any-reader/web build:w",
     "run:vsc": "npm-run-all core:build build:web-w",
-    "docs": "npm -C docs run docs:dev",
-    "build:docs": "npm -C docs run docs:build",
-    "server": "npm -C packages/server run dev",
+    "docs": "pnpm --filter docs docs:dev",
+    "build:docs": "pnpm --filter docs docs:build",
     "run:server": "run-p server run:web",
     "test": "jest",
     "coveralls": "jest --coverage",
     "prepare": "husky install",
-    "web:server": "npm -C packages/web run dev",
-    "web:build-b": "npm -C packages/web run build:b",
+    "web:server": "pnpm --filter=@any-reader/web dev",
+    "web:build-b": "pnpm --filter=@any-reader/web build:b",
     "web:dev": "npm-run-all --parallel web:server server",
-    "electron:server": "npm -C packages/web run electron:dev",
-    "electron:build": "npm -C packages/web run electron:build",
-    "vscode:server": "npm -C packages/web run vscode:dev",
+    "electron:server": "pnpm --filter=@any-reader/web electron:dev",
+    "electron:build": "pnpm --filter=@any-reader/web electron:build",
+    "vscode:server": "pnpm --filter=@any-reader/web vscode:dev",
     "vscode:dev": "npm-run-all core:build shared:build --parallel vscode:server server",
-    "vscode:build-tpl": "npm -C packages/web run vscode:build",
-    "vscode:build-vsx": "npm -C packages/vscode run build",
+    "vscode:build-tpl": "pnpm --filter=@any-reader/web vscode:build",
+    "vscode:build-vsx": "pnpm --filter=@any-reader/vscode build",
     "vscode:build": "npm-run-all vscode:build-tpl vscode:build-vsx",
-    "server:build": "npm -C packages/server run build",
-    "cli:build-tpl": "npm -C packages/web run cli:build",
-    "cli:build-js": "npm -C packages/cli run build",
+    "server": "pnpm --filter=@any-reader/server dev",
+    "server:build": "pnpm --filter=@any-reader/server build",
+    "cli:build-tpl": "pnpm --filter=@any-reader/web cli:build",
+    "cli:build-js": "pnpm --filter=@any-reader/cli build",
     "cli:build": "npm-run-all cli:build-tpl cli:build-js",
-    "utools:build": "npm -C packages/web run utools:build && npm -C packages/utools run build",
-    "rubick:build": "npm -C packages/rubick run build",
+    "utools:build": "pnpm --filter=@any-reader/web utools:build && pnpm --filter=@any-reader/utools build",
+    "rubick:build": "pnpm --filter=@any-reader/rubick build",
     "build": "npm-run-all rule-utils:build core:build epub:build shared:build server:build cli:build"
+  },
+  "dependencies": {
+    "sql.js": "^1.10.3",
+    "sqlite3": "5.1.6"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8",
@@ -70,8 +74,10 @@
     "@types/mime": "3.0.4",
     "@types/uuid": "^9.0.8",
     "bumpp": "^9.4.1",
+    "cross-env": "^7.0.3",
     "husky": "^8.0.0",
     "npm-run-all": "^4.1.5",
+    "tsx": "^4.16.2",
     "unbuild": "^2.0.0"
   },
   "lint-staged": {
