--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,7 +22,7 @@
     "dist"
   ],
   "scripts": {
-    "start": "esno src/start.ts",
+    "start": "tsx src/start.ts",
     "build": "unbuild",
     "stub": "unbuild --stub"
   },
@@ -45,7 +45,6 @@
     "@types/node": "^18.16.19",
     "@types/xmldom": "^0.1.34",
     "eslint": "^8.44.0",
-    "esno": "^0.16.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
