--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "unbuild",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "esno watch src/run.ts"
+    "dev": "tsx watch src/run.ts"
   },
   "dependencies": {
     "@any-reader/core": "workspace:^",
@@ -36,14 +36,15 @@
     "koa-bodyparser": "2",
     "koa-router": "^12.0.1",
     "koa-session": "^6.4.0",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "sql.js": "^1.10.3",
+    "sqlite3": "5.1.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/koa-router": "^7.4.8",
     "@types/koa-session": "^6.4.5",
     "@types/koa-static": "^4.0.4",
-    "@types/koa__cors": "^5.0.0",
-    "esno": "^0.16.3"
+    "@types/koa__cors": "^5.0.0"
   }
 }
