--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -24,8 +24,7 @@
   ],
   "scripts": {
     "build": "unbuild",
-    "stub": "unbuild --stub",
-    "start": "esno src/start.ts"
+    "stub": "unbuild --stub"
   },
   "dependencies": {
     "@any-reader/core": "workspace:^",
@@ -37,6 +36,7 @@
     "iconv-lite": "^0.6.3",
     "lodash-es": "^4.17.21",
     "lowdb": "^7.0.1",
+    "sql.js": "^1.10.3",
     "sqlite3": "5.1.6",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
@@ -50,7 +50,6 @@
     "@types/encoding-japanese": "^2.0.5",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.16.19",
-    "esno": "^0.16.3",
     "reflect-metadata": "^0.2.2",
     "rollup": "^3.26.0",
     "rollup-plugin-dts": "^5.3.0",
