--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -35,7 +35,7 @@
   ],
   "main": "./dist/extension.js",
   "scripts": {
-    "build:rename": "esno ./scripts/publish.cjs",
+    "build:rename": "tsx ./scripts/publish.cjs",
     "build:vsce": "vsce package --no-dependencies",
     "build": "npm-run-all build:rename build:vsce",
     "vscode:prepublish": "pnpm run package",
@@ -136,6 +136,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "@vscode/test-electron": "^2.1.5",
+    "copy-webpack-plugin": "^12.0.2",
     "easy-post-message": "^0.1.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
@@ -147,6 +148,7 @@
     "mocha": "^10.0.0",
     "prettier": "^2.7.1",
     "qs": "^6.12.1",
+    "sql.js": "^1.10.3",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "uuid": "^9.0.1",
