--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -72,6 +72,7 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/blueimp-md5": "^2.18.2",
+    "@types/file-saver": "^2.0.7",
     "@types/jsdom": "^21.1.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.16",
@@ -82,7 +83,6 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
     "chalk": "^5.2.0",
-    "cross-env": "^7.0.3",
     "electron": "30.0.6",
     "electron-builder": "^24.13.3",
     "electron-rebuild": "^3.2.9",
