--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    // https://github.com/typeorm/typeorm
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+
     "paths": {
       // "@any-reader/rule-utils": ["./packages/rule-utils/src/index.ts"],
       // "@any-reader/core": ["./packages/core/src/index.ts"],
