--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs",
   "type": "module",
-  "version": "1.8.2",
+  "version": "1.9.0-beta.1",
   "private": true,
   "scripts": {
     "docs:dev": "vitepress dev",
