--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "any-reader",
   "type": "module",
-  "version": "1.8.2",
+  "version": "1.9.0-beta.1",
   "private": true,
   "packageManager": "pnpm@9.4.0",
   "description": "",
