--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@any-reader/core",
   "type": "module",
-  "version": "1.8.2",
+  "version": "1.9.0-beta.1",
   "description": "",
   "author": "aooiuu <aooiu@qq.com>",
   "license": "GPL3",
