--- a/packages/utools/package.json
+++ b/packages/utools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@any-reader/utools",
-  "version": "1.8.2",
+  "version": "1.9.0-beta.1",
   "private": true,
   "description": "",
   "author": "aooiuu <aooiu@qq.com>",
