--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@any-reader/web",
-  "version": "1.8.2",
+  "version": "1.9.0-beta.1",
   "description": "",
   "author": "aooiuu <aooiu@qq.com>",
   "license": "GPL3",
