--- a/packages/rubick/package.json
+++ b/packages/rubick/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@any-reader/rubick",
   "type": "commonjs",
-  "version": "1.9.0-beta.1",
+  "version": "1.9.0",
   "private": true,
   "description": "",
   "author": "aooiuu <aooiu@qq.com>",
