--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@any-reader/server",
   "type": "module",
-  "version": "1.9.0-beta.1",
+  "version": "1.9.0",
   "description": "",
   "author": "aooiuu <aooiu@qq.com>",
   "license": "GPL3",
