--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "cross-env": "^7.0.3",
     "husky": "^8.0.0",
     "npm-run-all": "^4.1.5",
+    "tsup": "^8.1.2",
     "tsx": "^4.16.2",
     "unbuild": "^2.0.0"
   },
