--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -49,7 +49,7 @@ jobs:
 
       - run: pnpm install
       - run: pnpm run build
-      - run: pnpm run vscode:build-tpl
+      - run: pnpm run vscode:build
 
       # https://github.com/HaaLeo/publish-vscode-extension
       - name: build vscode vsx
