--- a/packages/rule-utils/tsconfig.json
+++ b/packages/rule-utils/tsconfig.json
@@ -1,11 +1,8 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "es2018",
     "module": "esnext",
-    "lib": ["esnext", "DOM"],
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true
+    "lib": ["esnext", "DOM"]
   }
 }
