--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,10 +3,6 @@
   "compilerOptions": {
     "target": "es2018",
     "module": "esnext",
-    "lib": ["esnext"],
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true
+    "lib": ["esnext"]
   }
 }
