feat: 添加规则调试工具

--- a/packages/vscode/tsconfig.json
+++ b/packages/vscode/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
+    "module": "ESNext",
     "target": "ES2016",
     "sourceMap": true,
     "strict": true
