--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,8 @@
     "docs:preview": "vitepress preview"
   },
   "devDependencies": {
-    "vitepress": "^1.3.0"
+    "mermaid": "^10.9.1",
+    "vitepress": "^1.3.0",
+    "vitepress-plugin-mermaid": "^2.0.16"
   }
 }
