--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -40,7 +40,8 @@
     "sql.js": "^1.10.3",
     "sqlite3": "5.1.6",
     "typeorm": "^0.3.20",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.6",
@@ -51,6 +52,7 @@
     "@types/encoding-japanese": "^2.0.5",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.16.19",
+    "@types/ws": "^8.5.11",
     "reflect-metadata": "^0.2.2",
     "rollup": "^3.26.0",
     "rollup-plugin-dts": "^5.3.0",
