--- a/packages/epub/package.json
+++ b/packages/epub/package.json
@@ -29,12 +29,9 @@
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.5",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.11.7",
     "@types/xml2js": "^0.4.14",
-    "mocha": "^5.2.0",
     "p-event": "^4",
-    "typescript": "3.6.4"
+    "typescript": "^5.5.3"
   },
   "keywords": [],
   "author": "julien-c",
