--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -124,13 +124,10 @@
     "@any-reader/shared": "workspace:^",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^7.2.0",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "16.x",
     "@types/vscode": "^1.68.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "@vscode/test-electron": "^2.1.5",
-    "copy-webpack-plugin": "^12.0.2",
     "easy-post-message": "^0.1.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
@@ -139,16 +136,12 @@
     "explorer-opener": "^1.0.1",
     "fs-extra": "^11.1.1",
     "glob": "^8.0.3",
-    "mocha": "^10.0.0",
     "prettier": "^2.7.1",
     "qs": "^6.12.1",
     "sql.js": "^1.10.3",
     "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
-    "uuid": "^9.0.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-filter-warnings-plugin": "^1.2.1"
+    "typescript": "^5.5.3",
+    "uuid": "^9.0.1"
   },
   "dependencies": {
     "sqlite3": "5.1.6"
