--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -75,7 +75,6 @@
     "@types/file-saver": "^2.0.7",
     "@types/jsdom": "^21.1.6",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.11.16",
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
@@ -93,7 +92,7 @@
     "prettier": "^3.0.3",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.1",
-    "typescript": "~5.3.3",
+    "typescript": "^5.5.3",
     "unocss": "^0.58.4",
     "unplugin-auto-import": "^0.16.4",
     "unplugin-vue-components": "^0.27.2",
