--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@any-reader/cli",
   "type": "commonjs",
-  "version": "1.9.8",
+  "version": "1.9.9-beta.1",
   "description": "",
   "author": "aooiuu <aooiu@qq.com>",
   "license": "GPL3",
