--- a/packages/epub/package.json
+++ b/packages/epub/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@any-reader/epub",
-  "version": "1.9.8",
+  "version": "1.9.9-beta.1",
   "description": "",
   "scripts": {
     "build": "unbuild"
