--- a/packages/rule-utils/package.json
+++ b/packages/rule-utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@any-reader/rule-utils",
   "type": "module",
-  "version": "1.9.8",
+  "version": "1.9.9-beta.1",
   "description": "",
   "author": "aooiuu <aooiu@qq.com>",
   "license": "GPL3",
