--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -36,6 +36,7 @@
     "fs-extra": "^11.1.1",
     "iconv-lite": "^0.6.3",
     "lodash-es": "^4.17.21",
+    "log4js": "^6.9.1",
     "lowdb": "^7.0.1",
     "sql.js": "^1.10.3",
     "sqlite3": "5.1.6",
