--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -76,6 +76,7 @@
     "@types/jsdom": "^21.1.6",
     "@types/lodash-es": "^4.17.12",
     "@types/nprogress": "^0.2.3",
+    "@unocss/eslint-config": "^0.61.9",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/eslint-config-prettier": "^8.0.0",
