--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -53,6 +53,7 @@
     "blueimp-md5": "^2.19.0",
     "dplayer": "^1.27.1",
     "easy-post-message": "^0.1.0",
+    "electron-localshortcut": "^3.2.1",
     "electron-updater": "^6.2.1",
     "file-saver": "^2.0.5",
     "hls.js": "^1.5.3",
@@ -72,6 +73,7 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/blueimp-md5": "^2.18.2",
+    "@types/electron-localshortcut": "^3.1.3",
     "@types/file-saver": "^2.0.7",
     "@types/jsdom": "^21.1.6",
     "@types/lodash-es": "^4.17.12",
