--- a/packages/legado/package.json
+++ b/packages/legado/package.json
@@ -33,6 +33,7 @@
     "cheerio": "1.0.0-rc.12",
     "content-type": "^1.0.5",
     "iconv-lite": "^0.6.3",
+    "isolated-vm": "^5.0.1",
     "jsonpath-plus": "^7.2.0",
     "puppeteer": "^21.7.0",
     "urlencode": "^2.0.0",
