--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "cli:build": "npm-run-all cli:build-tpl cli:build-js",
     "utools:build": "pnpm --filter=@any-reader/web utools:build && pnpm --filter=@any-reader/utools build",
     "rubick:build": "pnpm --filter=@any-reader/rubick build",
-    "build": "npm-run-all rule-utils:build core:build epub:build shared:build server:build cli:build"
+    "build": "npm-run-all rule-utils:build core:build epub:build shared:build server:build cli:build",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "sql.js": "^1.10.3",
@@ -74,6 +75,12 @@
     "@types/mime": "3.0.4",
     "@types/node": "^20.14.12",
     "@types/uuid": "^9.0.8",
+    "@rushstack/eslint-patch": "^1.3.3",
+    "@unocss/eslint-config": "^0.61.9",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
     "bumpp": "^9.4.1",
     "cross-env": "^7.0.3",
     "husky": "^8.0.0",
