--- a/packages/legado/package.json
+++ b/packages/legado/package.json
@@ -28,6 +28,7 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
+    "@xmldom/xmldom": "^0.8.10",
     "axios": "^1.5.1",
     "chardet": "^2.0.0",
     "cheerio": "1.0.0-rc.12",
@@ -37,8 +38,7 @@
     "jsonpath-plus": "^7.2.0",
     "puppeteer": "^21.7.0",
     "urlencode": "^2.0.0",
-    "xmldom": "^0.6.0",
-    "xpath.js": "^1.1.0"
+    "xpath": "^0.0.34"
   },
   "devDependencies": {
     "@any-reader/rule-utils": "workspace:^",
