feat(cli): 添加规则编解码命令

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@any-reader/server": "workspace:^",
+    "@any-reader/rule-utils": "workspace:^",
+    "commander": "^12.1.0",
     "open": "^10.1.0"
   },
   "devDependencies": {
