--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,6 +31,7 @@
     "chardet": "^2.0.0",
     "cheerio": "1.0.0-rc.12",
     "content-type": "^1.0.5",
+    "crypto-js": "^4.2.0",
     "iconv-lite": "^0.6.3",
     "jsonpath-plus": "^7.2.0",
     "puppeteer": "^21.7.0",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@any-reader/rule-utils": "workspace:^",
     "@types/content-type": "^1.1.8",
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.11",
     "@types/xmldom": "^0.1.34",
     "eslint": "^8.44.0",
