--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,19 @@
     "skipLibCheck": true,
     "lib": ["esnext"],
     "paths": {
-      // "@any-reader/rule-utils": ["./packages/rule-utils/src/index.ts"],
-      // "@any-reader/core": ["./packages/core/src/index.ts"],
-      // "@any-reader/epub": ["./packages/epub/src/index.ts"],
-      // "@any-reader/shared": ["./packages/shared/src/index.ts"]
+      "@any-reader/rule-utils": ["./packages/rule-utils/src/index.ts"],
+      "@any-reader/core": ["./packages/core/src/index.ts"],
+      "@any-reader/epub": ["./packages/epub/src/index.ts"],
+      "@any-reader/shared": ["./packages/shared/src/index.ts"]
     }
   },
 
-  "exclude": ["**/dist/**", "**/node_modules/**"]
+  "exclude": ["**/dist/**", "**/node_modules/**"],
+
+  "ts-node": {
+    "esm": true,
+    "transpileOnly": true,
+    "experimentalSpecifierResolution": "node",
+    "require": ["tsconfig-paths/register"]
+  }
 }
