--- a/package.json
+++ b/package.json
@@ -73,19 +73,21 @@
     "utf-8-validate": "^6.0.4"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.3.3",
     "@types/mime": "3.0.4",
     "@types/node": "^20.14.12",
     "@types/uuid": "^9.0.8",
-    "@rushstack/eslint-patch": "^1.10.4",
     "@unocss/eslint-config": "^0.61.9",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
     "bumpp": "^9.4.1",
     "cross-env": "^7.0.3",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.0",
     "npm-run-all": "^4.1.5",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "tsup": "^8.1.2",
     "tsx": "^4.16.2",
     "unbuild": "^2.0.0"
