feat(core): 添加 `cheerio`

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
     "recommendations": [
-        "antfu.unocss"
+        "antfu.unocss",
+        "vue.volar",
+        "dbaeumer.vscode-eslint"
     ]
 }
