--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -21,6 +21,7 @@
     "build": "tsx ./scripts/publish.cjs && unbuild"
   },
   "dependencies": {
+    "@any-reader/core": "workspace:^",
     "@any-reader/rule-utils": "workspace:^",
     "@any-reader/server": "workspace:^",
     "cli-progress": "^3.12.0",
