--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,7 @@
     "crypto-js": "^4.2.0",
     "iconv-lite": "^0.6.3",
     "jsonpath-plus": "^9.0.0",
+    "lodash-es": "^4.17.21",
     "puppeteer": "^21.7.0",
     "urlencode": "^2.0.0",
     "xmldom": "^0.6.0",
