chore(web): 取消编译时类型检查

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "dev": "cross-env VITE_APP_PLATFORM=browser vite",
     "build:w": "cross-env VITE_APP_PLATFORM=vscode vite build --watch",
-    "build": "cross-env VITE_APP_PLATFORM=vscode run-p type-check \"build-only {@}\" --",
-    "build:b": "cross-env VITE_APP_PLATFORM=browser run-p type-check \"build-only {@}\" --",
+    "build": "cross-env VITE_APP_PLATFORM=vscode",
+    "build:b": "cross-env VITE_APP_PLATFORM=browser",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
@@ -26,12 +26,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "electron:dev": "cross-env VITE_APP_PLATFORM=electron vite",
-    "electron:build-tpl": "cross-env VITE_APP_PLATFORM=electron run-p type-check \"build-only {@}\" --",
+    "electron:build-tpl": "cross-env VITE_APP_PLATFORM=electron",
     "electron:build-app": "electron-builder",
     "electron:build": "npm-run-all electron:build-tpl electron:build-app",
     "vscode:dev": "cross-env VITE_APP_PLATFORM=vscode vite",
-    "vscode:build": "cross-env VITE_APP_PLATFORM=vscode run-p type-check \"build-only {@}\" --",
-    "utools:build": "cross-env VITE_APP_PLATFORM=utools run-p type-check \"build-only {@}\" --",
+    "vscode:build": "cross-env VITE_APP_PLATFORM=vscode",
+    "utools:build": "cross-env VITE_APP_PLATFORM=utools",
     "cli:build": "cross-env VITE_APP_PLATFORM=browser outDir=../cli/public vite build",
     "postinstall": "electron-builder install-app-deps",
     "rebuild": "electron-rebuild -f -w sqlite3"
