--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,7 +33,7 @@
     "@koa/cors": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "koa": "^2.15.2",
-    "koa-bodyparser": "2",
+    "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
     "koa-session": "^6.4.0",
     "koa-static": "^5.0.0",
