--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore --cache"
   },
   "dependencies": {
-    "sql.js": "^1.10.3",
+    "sql.js": "^1.11.0",
     "sqlite3": "5.1.6"
   },
   "optionalDependencies": {
@@ -72,22 +72,22 @@
     "utf-8-validate": "^6.0.4"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@types/mime": "3.0.4",
-    "@types/node": "^20.14.12",
-    "@types/uuid": "^9.0.8",
+    "@rushstack/eslint-patch": "^1.10.4",
+    "@types/mime": "4.0.0",
+    "@types/node": "^20.16.5",
+    "@types/uuid": "^10.0.0",
     "@unocss/eslint-config": "^0.61.9",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
-    "bumpp": "^9.4.1",
+    "bumpp": "^9.5.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "husky": "^8.0.0",
-    "npm-run-all": "^4.1.5",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.28.0",
+    "husky": "^8.0.3",
+    "npm-run-all2": "^5.0.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tsup": "^8.1.2",
+    "tsup": "^8.2.4",
     "tsx": "^4.19.0",
     "unbuild": "^2.0.0",
     "vite-tsconfig-paths": "^5.0.1",
