--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,17 +27,17 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
-    "axios": "^1.7.5",
+    "@xmldom/xmldom": "^0.7.13",
+    "axios": "^1.7.7",
     "chardet": "^2.0.0",
-    "cheerio": "1.0.0-rc.12",
+    "cheerio": "1.0.0",
     "content-type": "^1.0.5",
     "crypto-js": "^4.2.0",
     "iconv-lite": "^0.6.3",
     "jsonpath-plus": "^9.0.0",
     "lodash-es": "^4.17.21",
-    "puppeteer": "^21.7.0",
+    "puppeteer": "^23.3.0",
     "urlencode": "^2.0.0",
-    "xmldom": "^0.6.0",
     "xpath.js": "^1.1.0"
   },
   "devDependencies": {
@@ -45,7 +45,7 @@
     "@types/content-type": "^1.1.8",
     "@types/crypto-js": "^4.2.2",
     "@types/xmldom": "^0.1.34",
-    "eslint": "^8.44.0",
-    "typescript": "^5.5.3"
+    "eslint": "^8.57.0",
+    "typescript": "^5.5.4"
   }
 }
