--- a/packages/legado/package.json
+++ b/packages/legado/package.json
@@ -29,14 +29,14 @@
   },
   "dependencies": {
     "@xmldom/xmldom": "^0.8.10",
-    "axios": "^1.7.5",
+    "axios": "^1.7.7",
     "chardet": "^2.0.0",
-    "cheerio": "1.0.0-rc.12",
+    "cheerio": "1.0.0",
     "content-type": "^1.0.5",
     "iconv-lite": "^0.6.3",
     "isolated-vm": "^5.0.1",
     "jsonpath-plus": "^9.0.0",
-    "puppeteer": "^21.7.0",
+    "puppeteer": "^23.3.0",
     "urlencode": "^2.0.0",
     "xpath": "^0.0.34"
   },
@@ -44,7 +44,7 @@
     "@any-reader/rule-utils": "workspace:^",
     "@types/content-type": "^1.1.8",
     "@types/xmldom": "^0.1.34",
-    "eslint": "^8.44.0",
-    "typescript": "^5.5.3"
+    "eslint": "^8.57.0",
+    "typescript": "^5.5.4"
   }
 }
