--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -46,57 +46,57 @@
     "@v-c/utils": "^0.0.26",
     "@vscode/codicons": "^0.0.36",
     "@vscode/webview-ui-toolkit": "^1.4.0",
-    "@vueuse/core": "^10.9.0",
+    "@vueuse/core": "^11.0.3",
     "ant-design-vue": "^4.2.3",
-    "axios": "^1.7.5",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "blueimp-md5": "^2.19.0",
     "dplayer": "^1.27.1",
     "easy-post-message": "^0.1.0",
     "electron-localshortcut": "^3.2.1",
-    "electron-updater": "^6.2.1",
+    "electron-updater": "^6.3.4",
     "file-saver": "^2.0.5",
     "hls.js": "^1.5.15",
     "lodash-es": "^4.17.21",
     "monaco-editor": "0.47.0",
     "nprogress": "^0.2.0",
-    "p-limit": "^5.0.0",
-    "pinia": "^2.1.7",
-    "qs": "^6.12.1",
+    "p-limit": "^6.1.0",
+    "pinia": "^2.2.2",
+    "qs": "^6.13.0",
     "sqlite3": "5.1.6",
-    "uuid": "^9.0.1",
-    "vue": "^3.4.15",
-    "vue-router": "^4.1.6"
+    "uuid": "^10.0.0",
+    "vue": "^3.5.3",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@tsconfig/node20": "^20.1.2",
+    "@tsconfig/node20": "^20.1.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/blueimp-md5": "^2.18.2",
     "@types/electron-localshortcut": "^3.1.3",
     "@types/file-saver": "^2.0.7",
-    "@types/jsdom": "^21.1.6",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash-es": "^4.17.12",
     "@types/nprogress": "^0.2.3",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "@vitejs/plugin-vue": "^5.1.3",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vue/tsconfig": "^0.5.1",
-    "chalk": "^5.2.0",
+    "chalk": "^5.3.0",
     "electron": "30.0.6",
     "electron-builder": "^24.13.3",
     "electron-rebuild": "^3.2.9",
     "mockjs": "^1.1.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.3",
-    "sass": "^1.59.3",
-    "sass-loader": "^13.2.1",
-    "typescript": "^5.5.3",
-    "unocss": "^0.58.4",
-    "unplugin-auto-import": "^0.16.4",
-    "unplugin-vue-components": "^0.27.2",
-    "vite": "^5.3.1",
+    "npm-run-all2": "^5.0.2",
+    "prettier": "^3.3.3",
+    "sass": "^1.78.0",
+    "sass-loader": "^13.3.3",
+    "typescript": "^5.5.4",
+    "unocss": "^0.58.9",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.3",
     "vite-bundle-analyzer": "^0.10.6",
     "vite-plugin-electron": "^0.28.7",
-    "vite-plugin-mock": "^3.0.1",
-    "vue-tsc": "^2.0.21"
+    "vite-plugin-mock": "^3.0.2",
+    "vue-tsc": "^2.1.6"
   }
 }
