chore: 添加忽略更新依赖

--- a/renovate.json
+++ b/renovate.json
@@ -13,5 +13,5 @@
     }
   ],
 
-  "ignoreDeps": ["esbuild", "rollup", "node", "typescript"]
+  "ignoreDeps": ["esbuild", "rollup", "node", "typescript", "pnpm", "electron", "vscode"]
 }
