chore: 忽略包管理器版本

--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,7 @@
 
   "packageRules": [
     {
-      "depTypeList": ["peerDependencies"],
+      "matchDepTypes": ["peerDependencies", "packageManager", "engines"],
       "enabled": false
     }
   ],
