--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,6 +5,7 @@
   "author": "aooiuu <aooiu@qq.com>",
   "license": "GPL3",
   "homepage": "https://github.com/aooiuu/any-reader#readme",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/aooiuu/any-reader"
