chore(deps): 固定 sqlite3 版本 5.1.6

--- a/renovate.json
+++ b/renovate.json
@@ -13,5 +13,15 @@
     }
   ],
 
-  "ignoreDeps": ["esbuild", "rollup", "node", "typescript", "pnpm", "electron", "vscode"]
+  "ignoreDeps": [
+    "esbuild",
+    "rollup",
+    "node",
+    "typescript",
+    "electron",
+    "vscode",
+
+    // https://github.com/TryGhost/node-sqlite3/issues/1748
+    "sqlite3"
+  ]
 }
