--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "lib": ["esnext"],
+    "types": ["node", "vite/client", "vitest/importMeta"],
     "paths": {
       "@any-reader/rule-utils": ["./packages/rule-utils/src/index.ts"],
       "@any-reader/core": ["./packages/core/src/index.ts"],
@@ -17,7 +18,7 @@
       "@any-reader/shared": ["./packages/shared/src/index.ts"]
     }
   },
-  "exclude": ["**/dist/**", "**/node_modules/**"],
+  "exclude": ["**/dist/**", "**/node_modules/**", "**/public/**"],
   "ts-node": {
     "esm": true,
     "transpileOnly": true,
