--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,10 @@
     ".": {
       "require": "./dist/index.cjs",
       "import": "./dist/index.mjs"
+    },
+    "./browser": {
+      "require": "./dist/browser/index.cjs",
+      "import": "./dist/browser/index.mjs"
     }
   },
   "main": "./dist/index.cjs",
@@ -27,6 +31,7 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
+    "@any-reader/rule-utils": "workspace:^",
     "@xmldom/xmldom": "^0.9.2",
     "axios": "^1.7.7",
     "chardet": "^2.0.0",
@@ -41,7 +46,6 @@
     "xpath.js": "^1.1.0"
   },
   "devDependencies": {
-    "@any-reader/rule-utils": "workspace:^",
     "@types/content-type": "^1.1.8",
     "@types/crypto-js": "^4.2.2",
     "@types/xmldom": "^0.1.34",
