--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@any-reader/core": "workspace:^",
+    "@shikijs/vitepress-twoslash": "^1.17.6",
     "mermaid": "^11.2.0",
     "vitepress": "^1.3.4",
     "vitepress-plugin-mermaid": "^2.0.16"
