--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore --cache"
   },
   "dependencies": {
+    "@unocss/reset": "^0.62.3",
     "sql.js": "^1.11.0",
     "sqlite3": "5.1.6"
   },
@@ -89,6 +90,7 @@
     "tsup": "^8.2.4",
     "tsx": "^4.19.0",
     "unbuild": "^2.0.0",
+    "unocss": "^0.62.3",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5"
   },
