--- a/docs/package.json
+++ b/docs/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@any-reader/core": "workspace:^",
     "@shikijs/vitepress-twoslash": "^1.17.6",
+    "js-base64": "^3.7.7",
     "mermaid": "^11.2.0",
     "vitepress": "^1.3.4",
     "vitepress-plugin-mermaid": "^2.0.16"
