fix: 封面图片高度

--- a/packages/web/.gitignore
+++ b/packages/web/.gitignore
@@ -27,6 +27,6 @@ coverage
 *.sln
 *.sw?
 
-# /auto-imports.d.ts
-# /.eslintrc-auto-import.json
+/auto-imports.d.ts
+/.eslintrc-auto-import.json
 /components.d.ts
