feat(core): 解析库适配浏览器环境

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/node": "^20.16.5",
     "@types/uuid": "^10.0.0",
     "@unocss/eslint-config": "^0.62.3",
+    "@vitest/browser": "^2.1.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "bumpp": "^9.5.2",
@@ -85,6 +86,7 @@
     "eslint-plugin-vue": "^9.28.0",
     "husky": "^8.0.3",
     "npm-run-all2": "^6.2.3",
+    "playwright": "^1.47.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.2.4",
