--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,9 @@
 node_modules
 *.d.ts
-/docs/.vitepress/cache
-/docs/.vitepress/dist
+
+# https://github.com/eslint/eslint/issues/10341
+!.vitepress
+**/.vitepress/cache
+**/.vitepress/dist
+
 /dist
