--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,8 @@
     "js-base64": "^3.7.7",
     "mermaid": "^11.2.0",
     "vitepress": "^1.3.4",
-    "vitepress-plugin-mermaid": "^2.0.16"
+    "vitepress-plugin-mermaid": "^2.0.16",
+    "@vueuse/core": "^11.1.0",
+    "vue-codemirror": "^6.1.1"
   }
 }
