--- a/package.json
+++ b/package.json
@@ -61,10 +61,13 @@
     "utools:build": "pnpm --filter=@any-reader/web utools:build && pnpm --filter=@any-reader/utools build",
     "rubick:build": "pnpm --filter=@any-reader/rubick build",
     "build": "npm-run-all rule-utils:build core:build epub:build shared:build server:build cli:build",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore --cache"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --cache"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-json": "^6.0.1",
     "@unocss/reset": "^0.62.3",
+    "codemirror": "^6.0.1",
     "sql.js": "^1.11.0",
     "sqlite3": "5.1.6"
   },
@@ -73,6 +76,7 @@
     "utf-8-validate": "^6.0.4"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
     "@rushstack/eslint-patch": "^1.10.4",
     "@types/node": "^20.16.5",
     "@types/uuid": "^10.0.0",
