--- a/packages/web/electron-builder.yml
+++ b/packages/web/electron-builder.yml
@@ -24,8 +24,8 @@ win:
     - target: nsis
       arch:
         - x64
-        - arm64
-        - ia32
+        # - arm64
+        # - ia32
   verifyUpdateCodeSignature: false
 
 mac:
