feat: 更换编辑器

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -42,6 +42,8 @@
     "@any-reader/core": "workspace:^",
     "@any-reader/rule-utils": "workspace:^",
     "@any-reader/shared": "workspace:^",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@v-c/utils": "^0.0.26",
     "@vscode/codicons": "^0.0.36",
     "@vscode/webview-ui-toolkit": "^1.4.0",
@@ -50,6 +52,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "blueimp-md5": "^2.19.0",
+    "codemirror": "^6.0.1",
     "dplayer": "^1.27.1",
     "easy-post-message": "^0.1.0",
     "electron-localshortcut": "^3.2.1",
@@ -57,7 +60,6 @@
     "file-saver": "^2.0.5",
     "hls.js": "^1.5.15",
     "lodash-es": "^4.17.21",
-    "monaco-editor": "0.52.0",
     "nprogress": "^0.2.0",
     "p-limit": "^6.1.0",
     "p-queue": "^8.0.1",
