--- a/docs/package.json
+++ b/docs/package.json
@@ -11,12 +11,15 @@
   "devDependencies": {
     "@any-reader/core": "workspace:^",
     "@any-reader/rule-utils": "workspace:^",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@shikijs/vitepress-twoslash": "^1.18.0",
+    "@vueuse/core": "^11.1.0",
+    "codemirror": "^6.0.1",
     "js-base64": "^3.7.7",
     "mermaid": "^11.2.1",
     "vitepress": "^1.3.4",
     "vitepress-plugin-mermaid": "^2.0.16",
-    "@vueuse/core": "^11.1.0",
     "vue-codemirror": "^6.1.1"
   }
 }
