--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.7.7",
     "blueimp-md5": "^2.19.0",
     "chardet": "^2.0.0",
+    "explorer-opener": "^1.0.1",
     "fs-extra": "^11.2.0",
     "iconv-lite": "^0.6.3",
     "lodash-es": "^4.17.21",
