--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "epub:build": "pnpm --filter=@any-reader/epub build",
     "build:web": "pnpm --filter=@any-reader/web build",
     "build:web-w": "pnpm --filter=@any-reader/web build:w",
-    "run:vsc": "npm-run-all core:build build:web-w",
     "docs": "pnpm --filter docs docs:dev",
     "build:docs": "pnpm --filter docs docs:build",
     "run:server": "run-p server run:web",
@@ -48,8 +47,9 @@
     "web:dev": "npm-run-all --parallel web:server server",
     "electron:server": "pnpm --filter=@any-reader/web electron:dev",
     "electron:build": "pnpm --filter=@any-reader/web electron:build",
-    "vscode:server": "pnpm --filter=@any-reader/web vscode:dev",
-    "vscode:dev": "npm-run-all core:build shared:build --parallel vscode:server server",
+    "vscode:compile": "pnpm --filter=@any-reader/vscode dev",
+    "vscode:dev": "npm-run-all build:web-w vscode:compile",
+    "vscode:web": "npm-run-all --parallel vscode:server server",
     "vscode:build-tpl": "pnpm --filter=@any-reader/web vscode:build",
     "vscode:build-vsx": "pnpm --filter=@any-reader/vscode build",
     "vscode:build": "npm-run-all vscode:build-tpl vscode:build-vsx",
