--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@any-reader/vscode",
+  "name": "any-reader",
   "displayName": "any-reader",
   "description": "摸鱼,自定义规则多站点聚合搜索阅读小说、漫画。包含JS规则解析库和VSCode插件。支持本地小说 TXT、EPUB",
   "icon": "resources/icon.png",
-  "version": "1.11.4",
+  "version": "1.11.5",
   "publisher": "aooiu",
   "private": true,
   "qna": "https://github.com/aooiuu/any-reader/issues",
@@ -24,7 +24,7 @@
     "eso"
   ],
   "engines": {
-    "vscode": "^1.68.0"
+    "vscode": "^1.93.0"
   },
   "categories": [
     "Other"
@@ -129,24 +129,7 @@
       }
     ]
   },
-  "devDependencies": {
-    "@any-reader/core": "workspace:^",
-    "@any-reader/shared": "workspace:^",
-    "@types/fs-extra": "^11.0.4",
-    "@types/vscode": "^1.93.0",
-    "@vscode/test-electron": "^2.4.1",
-    "easy-post-message": "^0.1.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "fs-extra": "^11.2.0",
-    "prettier": "^2.8.8",
-    "qs": "^6.13.0",
-    "sql.js": "^1.11.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.5.4",
-    "uuid": "^10.0.0"
-  },
+  "devDependencies": {},
   "dependencies": {
     "sqlite3": "5.1.6"
   }
