--- a/packages/web/tsconfig.app.json
+++ b/packages/web/tsconfig.app.json
@@ -9,7 +9,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@any-reader/*": ["../*/src"]
     }
   }
 }
