feat(vscode): 章节列表添加从新页面打开按钮

--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "web:dev": "npm-run-all --parallel web:server server",
     "electron:server": "pnpm --filter=@any-reader/web electron:dev",
     "electron:build": "pnpm --filter=@any-reader/web electron:build",
+    "vscode:server": "pnpm --filter=@any-reader/web vscode:dev",
     "vscode:compile": "pnpm --filter=@any-reader/vscode dev",
-    "vscode:dev": "npm-run-all build:web-w vscode:compile",
+    "vscode:dev": "npm-run-all --parallel build:web-w vscode:compile",
     "vscode:web": "npm-run-all --parallel vscode:server server",
     "vscode:build-tpl": "pnpm --filter=@any-reader/web vscode:build",
     "vscode:build-vsx": "pnpm --filter=@any-reader/vscode build",
